# Humanoid_Robot_Learning_Paper_Notebooks

./: .gitignore  AGENTS.md  LICENSE  README.md  _config.yml  index.html  progress.json  pyproject.toml  requirements-dev.txt  requirements-site.txt  skills-lock.json  updates.html
.github/: dependabot.yml
.jules/: bolt.md  sentinel.md
.obsidian/: workspace.json
_data/: i18n.json  papers.json  roadmap_links.yml  roadmap_order.yml  updates.json
_includes/: footer.html  header.html  paper-card.html  sponsor-dialog.html
_layouts/: default.html  paper.html
papers/: DAILY_SUMMARY_LOG.md  PROGRESS.md  TODO.md
scripts/: _common.py  adapt_mermaid_blocks.py  check_roadmap_quality.py  fill_published_dates.py  generate_updates_data.py  inject_reading_dates.py  prepare_pages.py  sanitize_paper_html.py  sync_progress.py  update_badges.py
tests/: conftest.py  test_code_block_rouge_split.py  test_extract_open_source.py  test_extract_published_date.py  test_fill_published_dates.py  test_generate_updates_data.py  test_heading_code_phrase.py  test_index_paper_fold.py  test_inject_reading_dates.py  test_kramdown_math_pipes.py  test_mermaid_adaptation.py  test_mermaid_config.py  test_mermaid_ios_plain.py  test_mobile_column_width_css.py  test_mobile_contain_css.py  test_mobile_sidebar_fab_css.py  test_paper_meta_blockquotes.py  test_prepare_pages.py  test_prepare_pages_golden.py  test_roadmap_links.py  test_roadmap_quality.py  test_sanitize_paper_html.py  test_scrollbar_css.py  test_update_badges.py  test_updates_emoji.py  test_updates_heatmap.py  test_updates_opensource.py  (+1 more)
(+336 files in other folders)
